Added new blog CVE-2025-24016

--- a/data/blogs/unsafe_deserialization_in_wazuh_rce_cve_2025_24016.mdx
+++ b/data/blogs/unsafe_deserialization_in_wazuh_rce_cve_2025_24016.mdx
@@ -6,7 +6,7 @@ category: "vulnerability"
 tags: ["CVE", "VulnerabilityResearch", "InfoSec", "Exploits","TechnicalAnalysis"]
 author: "Hamza Khattak"
 image: "/assets/img/blog/blog_post_2_2.png"
-authorQuote: "Stay Vigilant, Stay Secure"
+authorQuote: "Critical RCE Flaw in Wazuh: Unsafe Deserialization Puts Systems at Risk"
 ---
 
 ![CVE-2025-24016](/assets/img/blog/blog_post_2_2.png)
